@startuml
title StateSpec Generated Worker App Architecture

skinparam shadowing false
skinparam linetype ortho
skinparam packageStyle rectangle

package "Durable work sources" {
  queue "Workflow executions\nready step records" as WorkflowExecutions
  queue "Workflow heartbeat records\nclaim token + expiry" as WorkflowHeartbeats
  rectangle "WorkerContext\nexecutes workflow name" as WorkerContext
}

package "Generated worker tier" {
  rectangle "worker/main\nprocess entrypoint" as WorkerMain
  rectangle "WorkerProcess\nthread/goroutine lifecycle\nstart / stop / join\nworkflow loops + GC lifecycle" as WorkerProcess
  rectangle "WorkerProcessConfig\nbootstrap + poll interval" as WorkerProcessConfig
  rectangle "WorkerRuntime\nbackend + runtime stores\nGC enablement flag\nrun_once()" as WorkerRuntime
  rectangle "Generated worker loops\nper WorkerContext concurrency" as WorkerLoops
  rectangle "WorkerApplication\ncontext + handler composition" as WorkerApplication
  rectangle "WorkerRegistry\nworker lookup" as WorkerRegistry
  rectangle "WorkerDescriptors\nworker catalog view" as WorkerDescriptors
  rectangle "WorkerContexts\nworker execution contexts" as WorkerContexts
  rectangle "WorkflowRunner\nclaim / transactional handler\napply step result" as WorkflowRunner
  rectangle "Periodic keep-alive controller\nimmediate + timed heartbeat\nstop + error check" as KeepAliveController
  interface "Workflow/version\nstep handler" as StepHandler
  rectangle "WorkflowStepHandlers\ncontext + result\nstep invoker map" as StepHandlers
  rectangle "Per-workflow registries\nworkflow:version:step -> invoker" as WorkflowInvokerRegistry
  rectangle "WorkerQueues\nqueue definitions" as WorkerQueues
  rectangle "WorkerLeases\nlease definitions" as WorkerLeases
  rectangle "WorkerWorkflows\nworkflow definitions" as WorkerWorkflows
}

package "Generated common tier" {
  rectangle "descriptors\ncanonical descriptors + bootstrap helpers" as CommonDescriptors
  rectangle "EntityRepository\nbackend-neutral entity access" as EntityRepository
  rectangle "ExternalSystemRuntime\nclient interfaces" as ExternalSystemRuntime
  rectangle "ExternalSystemCallAdapters\nmapping + call adapters" as CallAdapters
  rectangle "ExternalSystemMetadataRuntime\nmetadata repository + resolver" as MetadataRuntime
  component "RuntimeFeatureFlagStore" as FeatureFlagStore
  component "RuntimeQueueStore" as QueueStore
  component "RuntimeLeaseStore" as LeaseStore
  component "RuntimeWorkflowStore" as WorkflowStore
  component "RuntimeLogSink" as LogSink
  component "RuntimeMetricSink" as MetricSink
  rectangle "EntityGcTypes\ncommon GC type definitions" as EntityGcDescriptors
  rectangle "EntityGcRepository\nindexed eligibility + finalize" as EntityGcRepository
  rectangle "EntityGcWorkers\nper-entity run_once workers" as EntityGcWorkers
}

package "User-owned worker implementation" {
  component "Concrete workflow step handler\nreturns WorkflowStepResult" as ConcreteStepHandler
  component "External system client implementation" as ExternalClientImpl
  component "Retry / timeout / idempotency policy" as RetryPolicy
}

package "Backend OCC boundary" {
  interface "Backend / IBackend" as Backend
  interface "Transaction / ITransaction" as Transaction
  database "Versioned persisted state" as Store
}

package "Runtime effects" {
  queue "Next workflow steps\nfrom handler result" as NextSteps
  queue "Durable queues" as DurableQueues
  cloud "External systems" as ExternalSystems
  cloud "Logs backend" as LogsBackend
  cloud "Metrics backend" as MetricsBackend
}

WorkerMain --> WorkerRuntime : wires backend
WorkerMain --> WorkflowInvokerRegistry : registers concrete handlers
WorkerMain --> WorkerProcessConfig : chooses lifecycle config
WorkerMain --> WorkerProcess : start + signal stop + join
WorkerMain --> WorkerProcess : passes invoker map
WorkerProcess --> WorkerRuntime : bootstrap()
WorkerProcess --> WorkerRuntime : start GC workers if enabled
WorkerProcess --> WorkerLoops : starts / stops / joins
WorkerProcess --> WorkerRuntime : request_stop()
WorkerProcess --> WorkerRuntime : join GC workers
WorkerProcess --> WorkerContexts : reads contexts
WorkerLoops --> WorkerRuntime : run_once(context, invoker map, "")
WorkerRuntime --> CommonDescriptors : bootstrap()
WorkerRuntime --> Backend : backend reference
WorkerRuntime --> FeatureFlagStore : owns
WorkerRuntime --> QueueStore : owns
WorkerRuntime --> LeaseStore : owns
WorkerRuntime --> WorkflowStore : owns
WorkerRuntime --> LogSink : owns
WorkerRuntime --> MetricSink : owns
WorkerRuntime --> EntityGcWorkers : start if enabled
WorkerRuntime --> EntityGcWorkers : request stop + join

CommonDescriptors --> Transaction : register_runtime_catalogTx()
CommonDescriptors --> FeatureFlagStore : register definitions
CommonDescriptors --> QueueStore : register definitions
CommonDescriptors --> LeaseStore : register definitions
CommonDescriptors --> WorkflowStore : register definitions
CommonDescriptors --> LogSink : register definitions
CommonDescriptors --> MetricSink : register definitions

WorkerApplication --> WorkerContext : selected context
WorkerApplication --> WorkerRuntime : run_once()
WorkerApplication --> StepHandlers : invoker map

WorkerRegistry --> WorkerDescriptors : catalog lookup
WorkerContexts --> CommonDescriptors : descriptor data
WorkerDescriptors --> CommonDescriptors : descriptor data
WorkerQueues --> CommonDescriptors : queue definitions
WorkerLeases --> CommonDescriptors : lease definitions
WorkerWorkflows --> CommonDescriptors : workflow definitions

WorkflowExecutions --> WorkflowStore : claimable records
WorkflowHeartbeats --> WorkflowStore : active claim heartbeat
WorkerRuntime --> WorkflowRunner : creates runner
WorkflowRunner --> WorkflowStore : claim_steps()
WorkflowRunner --> KeepAliveController : start after claim
KeepAliveController --> WorkflowStore : keep_alive_step()
KeepAliveController --> WorkflowRunner : stop + error state
WorkflowRunner --> StepHandlers : typed context
WorkflowRunner --> WorkflowInvokerRegistry : lookup by key
WorkflowInvokerRegistry --> StepHandler : invoke generated step method
StepHandler --> WorkflowRunner : WorkflowStepResult\ncomplete / fail / cancel
WorkflowRunner --> WorkflowStore : complete_stepTx() / fail_stepTx() / cancelTx()

ConcreteStepHandler ..|> StepHandler
ConcreteStepHandler --> RetryPolicy
ConcreteStepHandler --> EntityRepository : load / save entities
ConcreteStepHandler --> MetadataRuntime : resolve metadata
ConcreteStepHandler --> CallAdapters : map fields + call external API
ConcreteStepHandler --> FeatureFlagStore : evaluate
ConcreteStepHandler --> QueueStore : enqueue
ConcreteStepHandler --> LeaseStore : acquire / renew
ConcreteStepHandler --> WorkflowStore : schedule work
ConcreteStepHandler --> LogSink : emit
ConcreteStepHandler --> MetricSink : record

ExternalClientImpl ..|> ExternalSystemRuntime
CallAdapters --> ExternalSystemRuntime : typed client interface
ExternalSystemRuntime --> ExternalSystems : remote API call

EntityRepository --> Backend
MetadataRuntime --> Backend
FeatureFlagStore --> Backend
QueueStore --> Backend
LeaseStore --> Backend
WorkflowStore --> Backend
LogSink --> Backend
MetricSink --> Backend
EntityGcWorkers --> EntityGcRepository : scan + finalize
EntityGcRepository --> Backend

Backend --> Transaction : begin()
Transaction --> Store : OCC read/write set
WorkflowStore --> NextSteps : durable continuation
QueueStore --> DurableQueues : persisted messages
LogSink --> LogsBackend : structured records
MetricSink --> MetricsBackend : samples

note right of WorkflowRunner
The generated runner owns workflow
step execution mechanics: claim in a
short transaction, start periodic
heartbeat keep-alive, invoke the typed
handler inside the finalization
transaction, then apply the returned
result. It does not infer next steps
through a separate generated calculator.
end note

note right of KeepAliveController
Keep-alive uses the claim token and
updates heartbeat records instead of
the workflow execution document. A
keep-alive error aborts finalization.
end note

note right of StepHandler
Handlers own business logic and step
advancement decisions. Complete may
carry the next step; fail and cancel
carry a reason.
end note

note right of WorkerProcess
WorkerProcess owns generated background
lifecycle. It starts workflow loops for
contexts with executes, uses an empty
execution id to claim the next runnable
workflow, requests stop, and joins all
generated background work.
end note

note right of WorkerRuntime
Entity GC is enabled by default but can
be disabled in WorkerRuntimeConfig when
the API tier should host GC.
end note

note bottom of Transaction
Runtime stores are typed clients of the
generic OCC backend/transaction boundary.
Worker code should keep entity reads,
metadata reads, feature decisions, queue
updates, logs, and metrics transaction-aware.
end note

@enduml
